--- a/src/main/resources/css/jttp.css
+++ b/src/main/resources/css/jttp.css
@@ -17,34 +17,161 @@
 {
 margin-bottom: 0em;
 }
-.table-endtime:hover, .table-starttime:hover, .table-issue:hover, .table-comment:hover{
-cursor:pointer;
+
+/*********************************/
+/**********NEW DESING*************/
+/*********************************/
+
+/* Headline alignment */
+div#jttp-headline {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  height: 2rem;
+  padding-bottom: 1rem;
 }
 
-.rowHeader {
-    background-color: #E2E2E2;
-	text-align: center;
+/* Progress */
+div#jttp-headline-progress {
+  float: left;
+  width: 15rem;
+  height: 100%;
+}
+div#jttp-headline-progress-number {
+  float: right;
+}
+div#jttp-headline-progress-bar {
+  width: 15rem;
+  height: 100%;
 }
 
-.workRows{
-	background-color: #E2E2E2;
-	text-align: left!important;
+/* Day stepper */
+div#jttp-headline-day-stepper-container {
+  width: 20rem;
+  min-width: 20rem;
+  height: 100%;
+  border: none;
 }
 
-.rowAlter {
-    background-color: #F2F2F2;
-}
-.rowEdit {
-    background-color: #FFEAAE;
-}
-.button {
-    padding: 2px;
+button#jttp-headline-day-calendar {
+  min-width: 15rem;
 }
 
-.settings-button{
-	display: inline;
-	float: right;
+div#jttp-headline-empty {
+  width: 15rem;
+  height: 0rem;
 }
+
+/* Worklog table */
+section#jttp-worklog {
+  margin-bottom: 1rem;
+}
+
+#jttp-worklog-table tbody tr:hover {
+  background-color: #f5f5f5;
+}
+
+table#jttp-worklog-table th#jttp-worklog-description {
+  min-width: 15rem;
+  width: 50%;
+}
+
+table#jttp-worklog-table th#jttp-worklog-actions {
+  min-width: 5rem;
+  width: 5rem;
+}
+
+td.jttp-worklog-no-remaining {
+  color: red;
+}
+
+/* Inline time input fields flex */
+div#jttp-logwork-time {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+}
+div#jttp-logwork-time > div.field-group {
+  width: auto;
+  margin-right: 1rem;
+}
+
+/* General fields */
+section#jttp-logwork-fields {
+  box-sizing: border-box;
+  min-width: 550px;
+  width: calc((100% - 250px) /2);
+}
+
+/* Calendar */
+section#jttp-logwork-calendar {
+  box-sizing: border-box;
+  min-width: 250px;
+  width: 292px;
+  /*background: lightgray;*/
+}
+
+/* Worklog summary */
+section#jttp-worklog-summary {
+  box-sizing: border-box;
+  width: calc((100% - 250px) /2);
+}
+section#jttp-worklog-summary > div {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: 0px;
+}
+.jttp-row-header {
+  color: #707070;
+  font-weight: bold;
+}
+
+/* Bottom group flex */
+div#jttp-bottom-group {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+/* Bottom group flex */
+div#jttp-bottom-group > section {
+  padding-top: 10px;
+}
+
+/*********************************/
+/*********NEW DESING END**********/
+/*********************************/
+
+/* .table-endtime:hover, .table-starttime:hover, .table-issue:hover, .table-comment:hover{ */
+/* cursor:pointer; */
+/* } */
+
+/* .rowHeader { */
+/*     background-color: #E2E2E2; */
+/* 	text-align: center; */
+/* } */
+
+/* .workRows{ */
+/* 	background-color: #E2E2E2; */
+/* 	text-align: left!important; */
+/* } */
+
+/* .rowAlter { */
+/*     background-color: #F2F2F2; */
+/* } */
+/* .rowEdit { */
+/*     background-color: #FFEAAE; */
+/* } */
+/* .button { */
+/*     padding: 2px; */
+/* } */
+
+/* .settings-button{ */
+/* 	display: inline; */
+/* 	float: right; */
+/* } */
 
 .grid {
     font-family:Arial,Helvetica,sans-serif;
@@ -144,9 +271,9 @@ div.calendar {
     background-color: #d04437;
 }
 
-.logo-img{
-	float: right;
-}
+/* .logo-img{ */
+/* 	float: right; */
+/* } */
 
 .jttp-calendar{
     text-align: left;
@@ -154,18 +281,18 @@ div.calendar {
     padding:5px;
 }
 
-.jttp-calendar-img{
-    vertical-align: sub;
-}
+/* .jttp-calendar-img{ */
+/*     vertical-align: sub; */
+/* } */
 
-.summaty-table{
-	width: 100%;
-	padding-right: 5px;
-}
+/* .summaty-table{ */
+/* 	width: 100%; */
+/* 	padding-right: 5px; */
+/* } */
 
-.summaty-table-summary-column{
-    width: 20%;
-}
+/* .summaty-table-summary-column{ */
+/*     width: 20%; */
+/* } */
 
 .label-row{
     width: 5%;
@@ -175,17 +302,17 @@ div.calendar {
     width: 85px;
 }
 
-.summary-table-datepicker-column{
-	width: 30%;
-}
-.worklog-table-header-column{
-	width: 110px;
-}
+/* .summary-table-datepicker-column{ */
+/* 	width: 30%; */
+/* } */
+/* .worklog-table-header-column{ */
+/* 	width: 110px; */
+/* } */
 
-.time-input{
-	margin-right: 5px;
-	width: 100px;
-}
+/* .time-input{ */
+/* 	margin-right: 5px; */
+/* 	width: 100px; */
+/* } */
 
 .time-input-div{
 	position:absolute;
@@ -204,17 +331,17 @@ div.calendar {
 	width:970px;
 }
 
-.not_popup_calendar{
-	float: right;
-}
+/* .not_popup_calendar{ */
+/* 	float: right; */
+/* } */
 
-.center-text{
-	text-align: center;
-}
+/* .center-text{ */
+/* 	text-align: center; */
+/* } */
 
-.vertically-middle{
-	vertical-align: middle;
-}
+/* .vertically-middle{ */
+/* 	vertical-align: middle; */
+/* } */
 
 .jttp-aui-icon{
 	margin: 3px;
