v2.x-JIRAPLUGIN-248-JTTP_AUI_UPDATE
Added IssueCollector instade of feedbak to jttp (UNDER DEVELOPMENT)

--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -237,5 +237,10 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 
           </div>
       </div>
+      <!-- Issue Collector script -->
+      <script type="text/javascript" src="$issueCollectorSrc"></script>
+      #if($analyticsDTO.analyticsCheck)
+        #parse("templates/common/analytics.vm")
+      #end
 </body>
 </html>
