--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -51,7 +51,8 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 				jiraMainVersion : ${jiraMainVersion},
 				issueKey : '${issueKey}',
 				comment : '${comment}',
-				isEditAll : ${isEditAll}
+				actionFlag: '${actionFlag}',
+				worklogSize: ${worklogs.size()},
 			}
 		);
 	})(everit.jttp.main, AJS.$);
@@ -84,7 +85,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
       <div class="aui-page-panel">
       #if(!$message.isEmpty())
         <div id="error_message">
-          $message
+          $i18n.getText($message)
         </div>
       #end
 
@@ -128,12 +129,15 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 
           <div class="aui-page-panel-inner">
             <section class="aui-page-panel-content" id="jttp-change-date">
-              <div class="buttons-container">
-                <div class="buttons">
-                  <input class="aui-button " type="submit" value="Change date for all"
-                    id="jttp-logwork-change-date-all" name="lw_chgdate" title="Move all the worklogs to a particular day">
+              <form class="aui top-label" id="jttp-editall-form" method="get" action="JiraTimetrackerWebAction.jspa"  onsubmit="return everit.jttp.main.beforeSubmitEditAll();" >
+                <div class="buttons-container">
+                  <div class="buttons">
+                    <input type="hidden" id="worklogsIds" name="worklogsIds" value="$worklogsIds" >
+                    <input class="aui-button " type="submit" value="Change date for all" #if($worklogs.size() == 0) disabled #end
+                      id="jttp-logwork-change-date-all" name="lw_chgdate" title="Move all the worklogs to a particular day">
+                  </div>
                 </div>
-              </div>
+              </form>
             </section>
           </div>
 
@@ -159,9 +163,9 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                       <input id="endTime" class="text short-field" type="text"
                         name="endTime" maxlength="5" tabindex="2"
                         value="$endTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#issueSelect-textarea');"
-                        onclick="everit.jttp.main.endTimeInputClick($isEditAll);"
+                        onclick="everit.jttp.main.endTimeInputClick();"
                         pattern="^([01][0-9]|2[0-3]):[0-5][0-9]$" title="empty or hh:mm">
-                      <div id="endTimeInput" class="time-input-div" onclick="everit.jttp.main.endTimeInputClick($isEditAll);"></div>
+                      <div id="endTimeInput" class="time-input-div" onclick="everit.jttp.main.endTimeInputClick();"></div>
                     </span>
                     <input id="endNow" class="button" type="button" name="endNow" value="$i18n.getText('plugin.now')" onclick="everit.jttp.main.endNowClick($endTimeChange);">
                   </div>
@@ -173,9 +177,9 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                       <input id="durationTime" class="text short-field" type="text"
                         name="durationTime" maxlength="5" tabindex="2"
                         value="$durationTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#issueSelect-textarea');"
-                        onclick="everit.jttp.main.durationTimeInput($isEditAll);"
+                        onclick="everit.jttp.main.durationTimeInput();"
                         pattern="^([01][0-9]|2[0-3]):[0-5][0-9]$" title="empty or hh:mm" disabled >
-                      <div id="durationTimeInput" class="time-input-div" onclick="everit.jttp.main.durationTimeInput($isEditAll);"></div>
+                      <div id="durationTimeInput" class="time-input-div" onclick="everit.jttp.main.durationTimeInput();"></div>
                     </span>
                   </div>
                 </div>
@@ -216,6 +220,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                     <input type="hidden" id="actionWorklogId" name="actionWorklogId" value="$actionWorklogId" >
                     <input type="hidden" id="actionFlag" name="actionFlag" value="$actionFlag" >
                     <input type="hidden" id="date" name="date" >
+                    <input type="hidden" id="editAll" name="editAll" value="$editAllIds" >
                     <input type="hidden" id="worklogValuesJson" name="worklogValuesJson" >
                     <input class="aui-button aui-button-subtle" type="reset" value="Cancel"
                       id="jttp-logwork-cancel" name="lw_cancel" onclick="everit.jttp.main.cancelClick();">
@@ -228,6 +233,9 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
             <section class="aui-page-panel-content" id="jttp-logwork-calendar">
                 <!-- <div style="background-color: lightblue; width: 245.8px; height: 207.61px; margin: 50px 0px 50px 0px;"></div> -->
                 <div id="not_popup_calendar" class="not_popup_calendar"></div>
+                <script>
+                  everit.jttp.main.standCalendarSetup($isPopup);
+                </script>
             </section>
 
             <section class="aui-page-panel-content" id="jttp-worklog-summary">
