--- a/src/main/resources/css/jttp.css
+++ b/src/main/resources/css/jttp.css
@@ -68,6 +68,15 @@ section#jttp-worklog {
   margin-bottom: 1rem;
 }
 
+table.aui > thead > tr > th{
+    color: #707070;
+}
+
+/* Change date button's section */
+section#jttp-change-date {
+  padding-top: 0;
+}
+
 #jttp-worklog-table tbody tr:hover {
   background-color: #f5f5f5;
 }
@@ -144,34 +153,17 @@ div#jttp-bottom-group > section {
 /*********NEW DESING END**********/
 /*********************************/
 
-/* .table-endtime:hover, .table-starttime:hover, .table-issue:hover, .table-comment:hover{ */
-/* cursor:pointer; */
-/* } */
+.table-endtime:hover, .table-starttime:hover, .table-issue:hover, .table-comment:hover{
+cursor:pointer;
+}
 
-/* .rowHeader { */
-/*     background-color: #E2E2E2; */
-/* 	text-align: center; */
-/* } */
+table.aui>tbody>tr.rowEdit {
+    background-color: #FFEAAE;
+}
 
-/* .workRows{ */
-/* 	background-color: #E2E2E2; */
-/* 	text-align: left!important; */
-/* } */
-
-/* .rowAlter { */
-/*     background-color: #F2F2F2; */
-/* } */
-/* .rowEdit { */
-/*     background-color: #FFEAAE; */
-/* } */
-/* .button { */
-/*     padding: 2px; */
-/* } */
-
-/* .settings-button{ */
-/* 	display: inline; */
-/* 	float: right; */
-/* } */
+#jttp-worklog-table tbody tr.rowEdit:hover{
+    background-color: #f6c342;
+}
 
 .grid {
     font-family:Arial,Helvetica,sans-serif;
@@ -254,14 +246,6 @@ div.calendar {
 	padding-top: 6px;
 }
 
-/*#issueSelect-textarea, #issueSelect-multi-select{
-    width: 610px;
-}
-*/
-.jira-multi-select>.icon.drop-menu{
-    bottom: 6px;
-}
-
 #error_message{
     color: white;
     text-align: center;
@@ -271,9 +255,6 @@ div.calendar {
     background-color: #d04437;
 }
 
-/* .logo-img{ */
-/* 	float: right; */
-/* } */
 
 .jttp-calendar{
     text-align: left;
@@ -281,18 +262,6 @@ div.calendar {
     padding:5px;
 }
 
-/* .jttp-calendar-img{ */
-/*     vertical-align: sub; */
-/* } */
-
-/* .summaty-table{ */
-/* 	width: 100%; */
-/* 	padding-right: 5px; */
-/* } */
-
-/* .summaty-table-summary-column{ */
-/*     width: 20%; */
-/* } */
 
 .label-row{
     width: 5%;
@@ -301,18 +270,6 @@ div.calendar {
 .value-row{
     width: 85px;
 }
-
-/* .summary-table-datepicker-column{ */
-/* 	width: 30%; */
-/* } */
-/* .worklog-table-header-column{ */
-/* 	width: 110px; */
-/* } */
-
-/* .time-input{ */
-/* 	margin-right: 5px; */
-/* 	width: 100px; */
-/* } */
 
 .time-input-div{
 	position:absolute;
@@ -330,18 +287,6 @@ div.calendar {
 	margin:10px;
 	width:970px;
 }
-
-/* .not_popup_calendar{ */
-/* 	float: right; */
-/* } */
-
-/* .center-text{ */
-/* 	text-align: center; */
-/* } */
-
-/* .vertically-middle{ */
-/* 	vertical-align: middle; */
-/* } */
 
 .jttp-aui-icon{
 	margin: 3px;
