--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -150,7 +150,8 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                       value="$startTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#endTime');"
                       name="startTime" maxlength="5" tabindex="1"
                       pattern="^([01][0-9]|2[0-3]):[0-5][0-9]$" title="hh:mm"
-                      onblur="everit.jttp.main.calculateDuration();">
+                      onblur="everit.jttp.main.calculateDuration();"
+                      list="time-options" autocomplete="off">
                     <input id="startNow" name="startNow" class="button" type="button" value="$i18n.getText('plugin.now')"
                       onclick="everit.jttp.main.startNowClick($startTimeChange);">
                   </div>
@@ -163,13 +164,111 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                         name="endTime" maxlength="5" tabindex="2"
                         value="$endTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#issueSelect-textarea');"
                         onclick="everit.jttp.main.endTimeInputClick();"
-                        pattern="^([01][0-9]|2[0-3]):[0-5][0-9]$" title="empty or hh:mm"
-                        onblur="everit.jttp.main.calculateDuration();">
+                        pattern="^([01][0-9]|2[0-3]):[0-5][0-9]$" title="empty or hh:mm" 
+                        onblur="everit.jttp.main.calculateDuration();"
+                        list="time-options" autocomplete="off">
                       <div id="endTimeInput" class="time-input-div" onclick="everit.jttp.main.endTimeInputClick();"></div>
                     </span>
                     <input id="endNow" class="button" type="button" name="endNow" value="$i18n.getText('plugin.now')" onclick="everit.jttp.main.endNowClick($endTimeChange);">
                   </div>
-
+                  <datalist id="time-options">
+                    <option value="00:00">
+                    <option value="00:15">
+                    <option value="00:30">
+                    <option value="00:45">
+                    <option value="01:00">
+                    <option value="01:15">
+                    <option value="01:30">
+                    <option value="01:45">
+                    <option value="02:00">
+                    <option value="02:15">
+                    <option value="02:30">
+                    <option value="02:45">
+                    <option value="03:00">
+                    <option value="03:15">
+                    <option value="03:30">
+                    <option value="03:45">
+                    <option value="04:00">
+                    <option value="04:15">
+                    <option value="04:30">
+                    <option value="04:45">
+                    <option value="05:00">
+                    <option value="05:15">
+                    <option value="05:30">
+                    <option value="05:45">
+                    <option value="06:00">
+                    <option value="06:15">
+                    <option value="06:30">
+                    <option value="06:45">
+                    <option value="07:00">
+                    <option value="07:15">
+                    <option value="07:30">
+                    <option value="07:45">
+                    <option value="08:00">
+                    <option value="08:15">
+                    <option value="08:30">
+                    <option value="08:45">
+                    <option value="09:00">
+                    <option value="09:15">
+                    <option value="09:30">
+                    <option value="09:45">
+                    <option value="10:00">
+                    <option value="10:15">
+                    <option value="10:30">
+                    <option value="10:45">
+                    <option value="11:00">
+                    <option value="11:15">
+                    <option value="11:30">
+                    <option value="11:45">
+                    <option value="12:00">
+                    <option value="12:15">
+                    <option value="12:30">
+                    <option value="12:45">
+                    <option value="13:00">
+                    <option value="13:15">
+                    <option value="13:30">
+                    <option value="13:45">
+                    <option value="14:00">
+                    <option value="14:15">
+                    <option value="14:30">
+                    <option value="14:45">
+                    <option value="15:00">
+                    <option value="15:15">
+                    <option value="15:30">
+                    <option value="15:45">
+                    <option value="16:00">
+                    <option value="16:15">
+                    <option value="16:30">
+                    <option value="16:45">
+                    <option value="17:00">
+                    <option value="17:15">
+                    <option value="17:30">
+                    <option value="17:45">
+                    <option value="18:00">
+                    <option value="18:15">
+                    <option value="18:30">
+                    <option value="18:45">
+                    <option value="19:00">
+                    <option value="19:15">
+                    <option value="19:30">
+                    <option value="19:45">
+                    <option value="20:00">
+                    <option value="20:15">
+                    <option value="20:30">
+                    <option value="20:45">
+                    <option value="21:00">
+                    <option value="21:15">
+                    <option value="21:30">
+                    <option value="21:45">
+                    <option value="22:00">
+                    <option value="22:15">
+                    <option value="22:30">
+                    <option value="22:45">
+                    <option value="23:00">
+                    <option value="23:15">
+                    <option value="23:30">
+                    <option value="23:45">
+                  </datalist>
                   <div class="field-group">
                     <label for="durationTime">$i18n.getText("plugin.duration.time")</label> 
                     <input id="radioDuration" type="radio" name="endOrDuration" value="duration" style="display: none;">
